# orko.rs

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: layout.rs  main.rs
src/components/: footer.rs  github_link.rs  grid_background.rs  hero.rs  home.rs  install_cmd.rs  mod.rs  nav_menu.rs  releases.rs  stats.rs  version.rs  x_link.rs
